<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>groupId</groupId>
    <artifactId>AZBlackWidow-Chess</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <!-- project.java.version>1.11</project.java.version -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <nd4j.version>1.0.0-M2.1</nd4j.version>
        <dl4j.version>1.0.0-M2.1</dl4j.version>
        <java.version>17</java.version>
        <native.maven.plugin.version>0.9.19</native.maven.plugin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>5.7.1</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>31.1-jre</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.4.6</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.4.6</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.26</version>
            <scope>provided</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/ca.umontreal.iro.simul/ssj -->
        <dependency>
            <groupId>ca.umontreal.iro.simul</groupId>
            <artifactId>ssj</artifactId>
            <version>3.3.2</version>
        </dependency>
        <dependency>
            <groupId>info.leadinglight</groupId>
            <artifactId>jdot</artifactId>
            <version>1.0</version>
        </dependency>
        <!-- DEEPLEARNING 4J -->
        <dependency>
            <groupId>guru.nidi</groupId>
            <artifactId>graphviz-java</artifactId>
            <version>0.18.1</version>
        </dependency>
        <dependency>
            <groupId>org.deeplearning4j</groupId>
            <artifactId>deeplearning4j-core</artifactId>
            <version>${dl4j.version}</version>
        </dependency>
        <!-- CUDA -->
        <dependency>
            <groupId>org.nd4j</groupId>
            <artifactId>nd4j-cuda-11.6-platform</artifactId>
            <version>${nd4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.bytedeco</groupId>
            <artifactId>cuda-platform-redist</artifactId>
            <version>11.6-8.3-1.5.7</version>
        </dependency>
        <dependency>
            <groupId>org.nd4j</groupId>
            <artifactId>nd4j-cuda-11.6</artifactId>
            <version>${nd4j.version}</version>
            <classifier>windows-x86_64-cudnn</classifier>
        </dependency>
        <dependency>
            <groupId>org.nd4j</groupId>
            <artifactId>nd4j-cuda-11.6</artifactId>
            <version>${nd4j.version}</version>
            <classifier>linux-x86_64-cudnn</classifier>
        </dependency>
        <dependency>
            <groupId>org.bytedeco</groupId>
            <artifactId>tensorrt-platform-redist</artifactId>
            <version>8.2-1.5.7</version>
        </dependency>
        <!-- END CUDA -->

        <!-- Test -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.9.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.4</version>
        </dependency>

    </dependencies>

<!--    <pluginRepositories>-->
<!--        <pluginRepository>-->
<!--            <id>graalvm-native-build-tools-snapshots</id>-->
<!--            <name>GraalVM native-build-tools Snapshots</name>-->
<!--            <url>https://raw.githubusercontent.com/graalvm/native-build-tools/snapshots</url>-->
<!--            <releases>-->
<!--                <enabled>false</enabled>-->
<!--            </releases>-->
<!--            <snapshots>-->
<!--                <enabled>true</enabled>-->
<!--            </snapshots>-->
<!--        </pluginRepository>-->
<!--    </pluginRepositories>-->

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <release>17</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.20</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <includes>
                        <include>**/*Test*.java</include>
                    </includes>
                </configuration>
            </plugin>
<!--            <plugin>-->
<!--                <groupId>org.graalvm.buildtools</groupId>-->
<!--                <artifactId>native-maven-plugin</artifactId>-->
<!--                <version>${native.maven.plugin.version}</version>-->
<!--                <extensions>true</extensions>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>build-native</id>-->
<!--                        <goals>-->
<!--                            <goal>build</goal>-->
<!--                        </goals>-->
<!--                        <phase>package</phase>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--                <configuration>-->
<!--                    <skip>false</skip>-->
<!--                    <imageName>MCTSTrain</imageName>-->
<!--                    <mainClass>com.aquila.chess.MainTrainingAGZ</mainClass>-->
<!--                    <buildArgs>-->
<!--                        <buildArg>&#45;&#45;no-fallback</buildArg>-->
<!--                        <buildArg>&#45;&#45;report-unsupported-elements-at-runtime</buildArg>-->
<!--                        <buildArg>&#45;&#45;diagnostics-mode</buildArg>-->
<!--                        <buildArg>&#45;&#45;initialize-at-build-time</buildArg>-->
<!--                        <buildArg>-O0</buildArg>-->
<!--                        <buildArg>&#45;&#45;initialize-at-run-time=java.util.Random</buildArg>-->
<!--                        &lt;!&ndash; buildArg>report-unsupported-elements-at-compile</buildArg &ndash;&gt;-->
<!--                    </buildArgs>-->
<!--                    <jvmArgs>-->
<!--                        <arg>-Xmx30G</arg>-->
<!--                        <arg>-XX:-UseGCOverheadLimit</arg>-->
<!--                    </jvmArgs>-->
<!--                </configuration>-->
<!--            </plugin>-->
        </plugins>
    </build>

</project>